# TypeScratch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tests.py
ScratchCompiler/: blocks.py  exceptions.py  sb3_project.py  target.py  zipper.py
assets/: credits.txt
